--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     
-    <canvas id="canvas"></canvas>
+    <div class="container">
+        <canvas id="canvas"></canvas>
+    </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="./js/game.js"></script>
