--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
 <body>
     
     <div class="container">
+        <!-- For displaying information about player score, game status and etc -->
+        <div class="infoContainer">
+            <h2>Your are <span id="playerId"></span></h2>
+        </div>
+        
         <canvas id="canvas"></canvas>
     </div>
 
