--- a/public/index.html
+++ b/public/index.html
@@ -3,23 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-
-    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
-    <div class="container">
-        <!-- For displaying information about player score, game status and etc -->
-        <div class="infoContainer">
-            <h2>Your are <span id="playerId"></span></h2>
-        </div>
-        
-        <canvas id="canvas"></canvas>
+    <div>
+        <form action="/game" method="get">
+            <button type="submit">Start game</button>
+        </form>
     </div>
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="./js/game.js"></script>
-
 </body>
 </html>
