fixed client side animation request

--- a/public/game.html
+++ b/public/game.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!-- For displaying information about player score, game status and etc -->
         <div class="infoContainer">
-            <h2>Your are <span id="playerId"></span></h2>
+            <h2>You are <span id="playerId"></span></h2>
         </div>
         
         <canvas id="canvas"></canvas>
