--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Online Pong</title>
+
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <div>
-        <form action="/game" method="get">
-            <button type="submit">Start game</button>
-        </form>
+    <div class="container">
+        <h2>Click "Start game" button and send the game link to a friend you want to play with.</h2>
+        <div>
+            <form action="/game" method="get">
+                <button type="submit">Start game</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
