added ball speed increase after scoring

--- a/public/game.html
+++ b/public/game.html
@@ -29,7 +29,9 @@
         </div>
 
     <!-- Main canvas for game -->
-        <canvas id="canvas"></canvas>
+        <div class="canvasContainer">
+            <canvas id="canvas"></canvas>
+        </div>
         
     </div>
 
